# libfp

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
examples/: struct1.vasp  struct2.vasp  test.py
fppy/: _fplib.c  _libfp.c  pyfp.c  setup.py
fppy/fplib/: __init__.py  fplib.py
fppy/libfp/: __init__.py  libfp.py
fptest/: pos1  pos2  test.py
pyfp/: pyfp.c
src/: apc.c  apc.h  cell.c  cell.h  fingerprint.c  fingerprint.h  fpderivative.c  fplib.c  fplib.h  fplibf.c  libfp.c  libfp.h  rcov.c  rcov.h  test.c  version.h
tests/: __init__.py  test_libfp.py
