[build-system]
requires = ["setuptools>=45", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "fplib"
version = "3.1.2"  
description = "This is the fplib module."
authors = [
    {name = "Zhu Research Group", email = "li.zhu@rutgers.edu"},
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
urls = {Homepage = "https://github.com/Rutgers-ZRG/fplib"}
dependencies = [
    "numpy",
]

[tool.setuptools.packages.find]
where = ["fppy"]
include = ["fplib"]

[tool.setuptools.package-data]
fplib = ["*.pyd", "*.so"]
