[build-system]
requires = ["setuptools>=45", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "libfp"
version = "3.1.2"  
description = "This is the libfp module."
authors = [
    {name = "Zhu Research Group", email = "li.zhu@rutgers.edu"},
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
urls = {Homepage = "https://github.com/Rutgers-ZRG/libfp"}
dependencies = [
    "numpy",
]

[tool.setuptools.packages.find]
where = ["fppy"]
include = ["libfp"]

[tool.setuptools.package-data]
libfp = ["*.pyd", "*.so"]
